реализован scrapper service + новые команды, написаны тесты, добавлено логирование